# python-template

./: .editorconfig  .gitignore  .mlc-config.json  .travis.yml  .zenodo.json  ADD_TO_EXISTING_PACKAGE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  appveyor.yml  codemeta.json  cookiecutter.json  copier.yml  profiles.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  10_generated_package.md  20_template.md  30_blank.md
.github/workflows/: build.yml  cffconvert.yml  link-check.yml  markdown-link-check.yml  markdown-link-checker.yml  test.yml  tests.yml
copier/: global_flags.yml  messages.yml  profiles.yml  settings.yml
copier/questions/: essential.yml  features.yml  features_code_quality.yml  features_community.yml  features_documentation.yml  features_publish_release.yml  features_typing.yml  package_details.yml
hooks/: post_gen_project.py  pre_gen_project.py
src/: cookiecutter.json
src/hooks/: pre_gen_project.py
src/{{cookiecutter.project_name}}/: README.md
src/{{cookiecutter.project_name}}/.githooks/: pre-commit
template/: .gitignore  .gitlab-ci.yml  CITATION.cff.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  MANIFEST.in.jinja  NOTICE.jinja  README.dev.md.jinja  README.md.jinja  next_steps.md.jinja  project_setup.md.jinja  pyproject.toml.jinja  sonar-project.properties.jinja  {% if AddCitation %}CITATION.cff{% endif %}.jinja  {% if AddContributing %}CONTRIBUTING.md{% endif %}.jinja  {% if AddDevDoc %}README.dev.md{% endif %}.jinja  {% if AddSonarCloud %}sonar-project.properties{% endif %}.jinja  {% if license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if license == 'Apachev2' %}LICENSE{% endif %}.jinja  {% if license == 'BSD license' %}LICENSE{% endif %}.jinja  {% if license == 'BSD' %}LICENSE{% endif %}.jinja  {% if license == 'GNU Lesser General Public License v3 or later' %}LICENSE{% endif %}.jinja  {% if license == 'GNUv3' %}LICENSE{% endif %}.jinja  {% if license == 'ISC' %}LICENSE{% endif %}.jinja  {% if license == 'MIT licence' %}LICENSE{% endif %}.jinja  {% if license == 'Not open source' %}LICENSE{% endif %}.jinja  {% if license == 'Other' %}LICENSE{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/docs/: Makefile.jinja  conf.py.jinja  index.rst.jinja  make.bat.jinja
template/tests/: test_my_module.py.jinja
template/{% if AddLocalDocumentation %}docs{% endif %}/: conf.py.jinja
tests/: test_lint.py  test_project.py  test_values.py
{{cookiecutter.directory_name}}/: .bumpversion.cfg  .gitignore  .mlc-config.json  .prospector.yml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.dev.md  README.md  README.next_steps.md  README.project_layout_explained.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
{{cookiecutter.directory_name}}/.githooks/: pre-commit
{{cookiecutter.directory_name}}/.github/next_steps/: 01_coverage_badge.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
{{cookiecutter.directory_name}}/.github/workflows/: build.yml  cffconvert.yml  documentation.yml  markdown-link-check.yml  next_steps.yml  release.yml  sonarcloud.yml  stale_issue_pr.yml
{{cookiecutter.directory_name}}/docs/: conf.py
{{cookiecutter.directory_name}}/docs/_static/: theme_overrides.css
{{cookiecutter.directory_name}}/src/{{cookiecutter.package_name}}/: my_module.py
{{cookiecutter.directory_name}}/tests/: test_my_module.py
{{cookiecutter.directory_name}}/{{cookiecutter.package_name}}/: __init__.py  my_module.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  .mlc-config.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  NOTICE  README.dev.md  README.dev.rst  README.md  README.rst  next_steps.md  project_setup.md  project_setup.rst  setup.cfg  sonar-project.properties
{{cookiecutter.project_name}}/.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  02_zenodo_integration.md  02_zenodo_integration.yml  03_readthedocs.md  03_readthedocs.yml  04_citation.md  04_zenodo_integration.md  05_linting.md  labels.yml
{{cookiecutter.project_name}}/.github/workflows/: build.yml  create-issues.yml  lint.yml  next_steps.yml  publish.yml
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.project_name}}/docs/_static/: theme_overrides.css
{{cookiecutter.project_name}}/tests/: test_lint.py  test_my_module.py  test_{{cookiecutter.derived.module_name}}.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.derived.package_name}}/: __init__.py  __version__.py  {{cookiecutter.derived.module_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  __version__.py  my_module.py
{{cookiecutter.project_slug}}/: .gitignore  .prospector.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  VERSION  project_setup.md  project_setup.rst  requirements.txt  setup.cfg  setup.py  sonar-project.properties
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  ci_build.yml  ci_deploy.yml  linting.yml  pypi.yml  pythonapp.yml  quality.yml  tweet-release.yml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.project_slug}}/tests/: test_lint.py  test_{{ cookiecutter.project_slug.lower().replace(' ', '_').replace('-', '_')}}.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug.lower().replace(' ', '_').replace('-', '_')}}/: __init__.py  __version__.py  {{ cookiecutter.project_slug.lower().replace(' ', '_').replace('-', '_')}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  {{ cookiecutter.project_slug.lower().replace(' ', '_').replace('-', '_')}}.py  {{cookiecutter.project_slug}}.py
(+31 files in other folders)
