# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/


[metadata]
author = Netherlands eScience Center
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = Copier template to initialize Python projects in accordance with Netherlands eScience Center best practices
long_description = file: README.md
long_description_content_type = text/markdown
name = Netherlands eScience Center Python Template
project_urls =
    Bug Tracker = https://github.com/NLeSC/python-template/issues
url = https://github.com/NLeSC/python-template
version = 0.6.1


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
packages =
install_requires =
    copier==9.2.0

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[options.extras_require]
dev =
    coverage [toml]
    pytest
    pytest-copie>=0.2.1


[tool:pytest]
testpaths = tests
norecursedirs = .git .github hooks template
