# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "{{ {'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
        'MIT license': 'License :: OSI Approved :: MIT License',
        'BSD license': 'License :: OSI Approved :: BSD License',
        'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
        'GNU General Public License v3 or later': 'License :: OSI Approved :: GNU General Public License',
        'Not open source': 'License :: Other/Proprietary License'
    }[cookiecutter.license] }}",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
description = "{{ cookiecutter.package_short_description }}"
keywords = [
    "{{ cookiecutter.keyword1 }}",
    "{{ cookiecutter.keyword2 }}",
]
license = {file = "LICENSE"}
name = "{{ cookiecutter.package_name }}"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
version = "{{ cookiecutter.version }}"

[project.optional-dependencies]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "tox",
    "myst_parser",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "myst_parser",
]
publishing = [
    "build",
    "twine",
    "wheel",
]

[project.urls]
Repository = "{{ cookiecutter.repository_url }}"
Issues = "{{ cookiecutter.repository_url }}/issues"
Changelog = "{{ cookiecutter.repository_url }}/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/{{ cookiecutter.package_name }}"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 120
output-format = "concise"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]
pydocstyle.convention = "google"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"] # unused imports (should not disappear while editing)
extend-safe-fixes = [
    "D415",   # First line should end with a period, question mark, or exclamation point
    "D300",   # Use triple double quotes `"""`
    "D200",   # One-line docstring should fit on one line
    "TCH",    # Format type checking only imports
    "ISC001", # Implicitly concatenated strings on a single line
    "EM",     # Exception message variables
    "RUF013", # Implicit Optional
    "B006",   # Mutable default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of `assert` detected
    "PT011",  # pytest-raises-too-broad
    "ANN001", # Missing function argument type
    "ANN201", # Missing return type
    "D103",   # Missing function docstring
    "ANN401", # Function arguments annotated with too generic `Any` type
    "SLF001", # Private member access
]
"docs/conf.py" = [
    "INP001", # Add __init__.py to implicit namespace package
    "ERA001", # Commented-out code
    "A001",   # Shadowing Python builtin name, specifically `copyright`
]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"

[[tool.bumpversion.files]]
filename = "src/{{ cookiecutter.package_name }}/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
