# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    {{ {"Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
        "MIT license": "License :: OSI Approved :: MIT License",
        "BSD license": "License :: OSI Approved :: BSD License",
        "ISC license": "License :: OSI Approved :: ISC License (ISCL)",
        "GNU General Public License v3 or later": "License :: OSI Approved :: GNU General Public License",
        "Not open source": "License :: Other/Proprietary License"
    }[cookiecutter.license] }}
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = {{ cookiecutter.package_short_description }}
keywords =
    {{ cookiecutter.keyword1 }}
    {{ cookiecutter.keyword2 }}
long_description = file: README.md
long_description_content_type = text/markdown
name = {{ cookiecutter.package_name }}
project_urls =
    Bug Tracker = {{ cookiecutter.repository }}/issues
url = {{ cookiecutter.repository }}
version = {{ cookiecutter.version }}

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    ruff
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = {{ cookiecutter.package_name }}, {{ cookiecutter.package_name }}.*
