# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    {{ {"Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
        "MIT license": "License :: OSI Approved :: MIT License",
        "BSD license": "License :: OSI Approved :: BSD License",
        "ISC license": "License :: OSI Approved :: ISC License (ISCL)",
        "GNU General Public License v3 or later": "License :: OSI Approved :: GNU General Public License",
        "Not open source": "License :: Other/Proprietary License"
    }[cookiecutter.license] }}
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = {{ cookiecutter.package_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
name = {{ cookiecutter.package_name }}
project_urls =
    Bug Tracker = {{ cookiecutter.repository }}/issues
url = {{ cookiecutter.repository }}
version = {{ cookiecutter.version }}


[options]
zip_safe = False
include_package_data = True
packages =
    {{ cookiecutter.package_name }}
install_requires =


[options.extras_require]
dev =
    prospector[with_pyroma]
    yapf
    isort
    pytest
    pytest-cov
    pycodestyle
    docutils
    pytest-runner
    sphinx
    sphinx_rtd_theme
    recommonmark

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = {{ cookiecutter.package_name }}

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
